@@ -125,9 +125,14 @@ if(ZEPHYR_BASE)
 		return()
 	endif()
 	if (CONFIG_AFB_RPC_NET)
-		add_compile_definitions(WITH_SOCKETS=1)
+		zephyr_compile_definitions(WITH_SOCKETS=1)
 	else()
-		add_compile_definitions(WITH_SOCKETS=0)
+		zephyr_compile_definitions(WITH_SOCKETS=0)
+	endif()
+	if (CONFIG_AFB_LLEXT_LOADER)
+		zephyr_compile_definitions(WITH_ZEPHYR_LLEXT=1)
+	else()
+		zephyr_compile_definitions(WITH_ZEPHYR_LLEXT=0)
 	endif()
 	SET(WITH_ZEPHYR YES)
 	# almost sure
