@@ -39,10 +39,6 @@
 
 extern int afb_v4_itf_type_register(struct afb_type **type, const char *name, afb_type_flags_x4_t flags);
 
-#if WITH_DYNAMIC_BINDING
-
-#include "../sys/x-dynlib.h"
-
 struct afb_v4_dynlib_info
 {
 	/** root api */
@@ -60,6 +56,10 @@ struct afb_v4_dynlib_info
 	/** the revision */
 	short revision;
 };
+
+#if WITH_DYNAMIC_BINDING || WITH_ZEPHYR_LLEXT
+
+#include "../sys/x-dynlib.h"
 
 extern void afb_v4_connect_dynlib(x_dynlib_t *dynlib, struct afb_v4_dynlib_info *info, afb_api_x4_t rootapi);
 extern int afb_v4_itf_setup_shared_object(afb_api_x4_t root, void *handle);
