@@ -1,3 +1,9 @@
+Version ?
+--------------
+
+  feature
+   - support of LLEXT in Zephyr
+
 Version 5.3.10
 --------------
 
